Runtimes/ISpectrumNativeLib.Implementation.cs


        [DllImport(LibNamePropvider.LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "SpectrumMathClearData")]
        private static extern void n_SpectrumMathClearData(IntPtr spectrumMathPtr);
        public void SpectrumMathClearData(IntPtr spectrumMathPtr)
        { 
            DefaultImpl.n_SpectrumMathClearData( spectrumMathPtr); 
        }

        [DllImport(LibNamePropvider.LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "SpectrumMathReleaseNativeArray")]
        private static extern void n_SpectrumMathReleaseNativeArray(IntPtr arrayPtr);
        public void SpectrumMathReleaseNativeArray(IntPtr arrayPtr)
        { 
            DefaultImpl.n_SpectrumMathReleaseNativeArray( arrayPtr); 
        }

        [DllImport(LibNamePropvider.LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "SpectrumMathSetSquaredSpect")]
        private static extern void n_SpectrumMathSetSquaredSpect(IntPtr spectrumMathPtr, bool fl);
        public void SpectrumMathSetSquaredSpect(IntPtr spectrumMathPtr, bool fl)
        { 
            DefaultImpl.n_SpectrumMathSetSquaredSpect( spectrumMathPtr, fl); 
        }
 
    }
    public class WinX86Impl : ISpectrumNativeLib
    {
        
        [DllImport(LibNamePropvider.LibNameWin32, CallingConvention = CallingConvention.Cdecl, EntryPoint = "createSpectrumMath")]
        private static extern IntPtr n_createSpectrumMath(int sampl_rate, int fft_window, int process_win_freq);
        public IntPtr createSpectrumMath(int sampl_rate, int fft_window, int process_win_freq)
        { 
           return WinX86Impl.n_createSpectrumMath( sampl_rate, fft_window, process_win_freq); 
        }

        [DllImport(LibNamePropvider.LibNameWin32, CallingConvention = CallingConvention.Cdecl, EntryPoint = "freeSpectrumMath")]
        private static extern void n_freeSpectrumMath(IntPtr ptr);
        public void freeSpectrumMath(IntPtr ptr)
        { 
            WinX86Impl.n_freeSpectrumMath( ptr); 
        }

        [DllImport(LibNamePropvider.LibNameWin32, CallingConvention = CallingConvention.Cdecl, EntryPoint = "SpectrumMathInitParams")]
        private static extern void n_SpectrumMathInitParams(IntPtr ptr, int up_border_frequency, bool normalize_spect_by_bandwidth);
        public void SpectrumMathInitParams(IntPtr ptr, int up_border_frequency, bool normalize_spect_by_bandwidth)
        { 
            WinX86Impl.n_SpectrumMathInitParams( ptr, up_border_frequency, normalize_spect_by_bandwidth); 
        }

        [DllImport(LibNamePropvider.LibNameWin32, CallingConvention = CallingConvention.Cdecl, EntryPoint = "SpectrumMathSetFFTWinLengthAndProccessFreq")]
        private static extern void n_SpectrumMathSetFFTWinLengthAndProccessFreq(IntPtr ptr, int fft_win_length, int process_win_freq);
        public void SpectrumMathSetFFTWinLengthAndProccessFreq(IntPtr ptr, int fft_win_length, int process_win_freq)
        { 
            WinX86Impl.n_SpectrumMathSetFFTWinLengthAndProccessFreq( ptr, fft_win_length, process_win_freq); 
        }

        [DllImport(LibNamePropvider.LibNameWin32, CallingConvention = CallingConvention.Cdecl, EntryPoint = "SpectrumMathSetWavesCoeffs")]
        private static extern void n_SpectrumMathSetWavesCoeffs(IntPtr spectrumMathPtr, double d_coef, double t_coef, double a_coef, double b_coef, double g_coef);
        public void SpectrumMathSetWavesCoeffs(IntPtr spectrumMathPtr, double d_coef, double t_coef, double a_coef, double b_coef, double g_coef)
        { 
            WinX86Impl.n_SpectrumMathSetWavesCoeffs( spectrumMathPtr, d_coef, t_coef, a_coef, b_coef, g_coef); 
        }

        [DllImport(LibNamePropvider.LibNameWin32, CallingConvention = CallingConvention.Cdecl, EntryPoint = "SpectrumMathSetHanningWinSpect")]
        private static extern void n_SpectrumMathSetHanningWinSpect(IntPtr spectrumMathPtr);
        public void SpectrumMathSetHanningWinSpect(IntPtr spectrumMathPtr)
        { 
            WinX86Impl.n_SpectrumMathSetHanningWinSpect( spectrumMathPtr); 
        }

        [DllImport(LibNamePropvider.LibNameWin32, CallingConvention = CallingConvention.Cdecl, EntryPoint = "SpectrumMathSetHammingWinSpect")]
        private static extern void n_SpectrumMathSetHammingWinSpect(IntPtr spectrumMathPtr);
        public void SpectrumMathSetHammingWinSpect(IntPtr spectrumMathPtr)
        { 
            WinX86Impl.n_SpectrumMathSetHammingWinSpect( spectrumMathPtr); 
        }

        [DllImport(LibNamePropvider.LibNameWin32, CallingConvention = CallingConvention.Cdecl, EntryPoint = "SpectrumMathPushData")]
        private static extern void n_SpectrumMathPushData(IntPtr spectrumMathPtr, [In,Out] double[] samples, int sampleCount);
        public void SpectrumMathPushData(IntPtr spectrumMathPtr, [In,Out] double[] samples, int sampleCount)
        { 
            WinX86Impl.n_SpectrumMathPushData( spectrumMathPtr, samples, sampleCount); 
        }

        [DllImport(LibNamePropvider.LibNameWin32, CallingConvention = CallingConvention.Cdecl, EntryPoint = "SpectrumMathProcessData")]
        private static extern void n_SpectrumMathProcessData(IntPtr spectrumMathPtr);
        public void SpectrumMathProcessData(IntPtr spectrumMathPtr)
        { 
            WinX86Impl.n_SpectrumMathProcessData( spectrumMathPtr); 
        }

        [DllImport(LibNamePropvider.LibNameWin32, CallingConvention = CallingConvention.Cdecl, EntryPoint = "SpectrumMathComputeSpectrum")]
        private static extern void n_SpectrumMathComputeSpectrum(IntPtr spectrumMathPtr, [In,Out] double[] vals_arr, int arr_size);
        public void SpectrumMathComputeSpectrum(IntPtr spectrumMathPtr, [In,Out] double[] vals_arr, int arr_size)
        { 
            WinX86Impl.n_SpectrumMathComputeSpectrum( spectrumMathPtr, vals_arr, arr_size); 
        }

        [DllImport(LibNamePropvider.LibNameWin32, CallingConvention = CallingConvention.Cdecl, EntryPoint = "SpectrumMathGetFFTBinsFor1Hz")]
        private static extern double n_SpectrumMathGetFFTBinsFor1Hz(IntPtr spectrumMathPtr);
        public double SpectrumMathGetFFTBinsFor1Hz(IntPtr spectrumMathPtr)
        { 
           return WinX86Impl.n_SpectrumMathGetFFTBinsFor1Hz( spectrumMathPtr); 
        }

        [DllImport(LibNamePropvider.LibNameWin32, CallingConvention = CallingConvention.Cdecl, EntryPoint = "SpectrumMathGetFFTWindow")]
        private static extern int n_SpectrumMathGetFFTWindow(IntPtr spectrumMathPtr);
        public int SpectrumMathGetFFTWindow(IntPtr spectrumMathPtr)
        { 
           return WinX86Impl.n_SpectrumMathGetFFTWindow( spectrumMathPtr); 
        }

        [DllImport(LibNamePropvider.LibNameWin32, CallingConvention = CallingConvention.Cdecl, EntryPoint = "SpectrumMathReadRawSpectrumInfo")]
        private static extern void n_SpectrumMathReadRawSpectrumInfo(IntPtr spectrumMathPtr, ref NativeRawSpectrumData raw_spect_data);
        public void SpectrumMathReadRawSpectrumInfo(IntPtr spectrumMathPtr, ref NativeRawSpectrumData raw_spect_data)
        { 
            WinX86Impl.n_SpectrumMathReadRawSpectrumInfo( spectrumMathPtr,ref raw_spect_data); 
        }

        [DllImport(LibNamePropvider.LibNameWin32, CallingConvention = CallingConvention.Cdecl, EntryPoint = "SpectrumMathReadWavesSpectrumInfo")]
        private static extern void n_SpectrumMathReadWavesSpectrumInfo(IntPtr spectrumMathPtr, ref WavesSpectrumData waves_spect_data);
        public void SpectrumMathReadWavesSpectrumInfo(IntPtr spectrumMathPtr, ref WavesSpectrumData waves_spect_data)
        { 
            WinX86Impl.n_SpectrumMathReadWavesSpectrumInfo( spectrumMathPtr,ref waves_spect_data); 
        }

        [DllImport(LibNamePropvider.LibNameWin32, CallingConvention = CallingConvention.Cdecl, EntryPoint = "SpectrumMathReadSpectrumArrSize")]
        private static extern uint n_SpectrumMathReadSpectrumArrSize(IntPtr spectrumMathPtr);
        public uint SpectrumMathReadSpectrumArrSize(IntPtr spectrumMathPtr)
        { 
           return WinX86Impl.n_SpectrumMathReadSpectrumArrSize( spectrumMathPtr); 
        }

        [DllImport(LibNamePropvider.LibNameWin32, CallingConvention = CallingConvention.Cdecl, EntryPoint = "SpectrumMathReadRawSpectrumInfoArr")]
        private static extern void n_SpectrumMathReadRawSpectrumInfoArr(IntPtr spectrumMathPtr, [In,Out] NativeRawSpectrumData[] raw_spect_data_arr, ref uint arr_size);
        public void SpectrumMathReadRawSpectrumInfoArr(IntPtr spectrumMathPtr, [In,Out] NativeRawSpectrumData[] raw_spect_data_arr, ref uint arr_size)
        { 
            WinX86Impl.n_SpectrumMathReadRawSpectrumInfoArr( spectrumMathPtr, raw_spect_data_arr,ref arr_size); 
        }

        [DllImport(LibNamePropvider.LibNameWin32, CallingConvention = CallingConvention.Cdecl, EntryPoint = "SpectrumMathReadWavesSpectrumInfoArr")]
        private static extern void n_SpectrumMathReadWavesSpectrumInfoArr(IntPtr spectrumMathPtr, [In,Out] WavesSpectrumData[] waves_spect_data_arr, ref uint arr_size);
        public void SpectrumMathReadWavesSpectrumInfoArr(IntPtr spectrumMathPtr, [In,Out] WavesSpectrumData[] waves_spect_data_arr, ref uint arr_size)
        { 
            WinX86Impl.n_SpectrumMathReadWavesSpectrumInfoArr( spectrumMathPtr, waves_spect_data_arr,ref arr_size); 
        }

        [DllImport(LibNamePropvider.LibNameWin32, CallingConvention = CallingConvention.Cdecl, EntryPoint = "SpectrumMathSetNewSampleSize")]
        private static extern void n_SpectrumMathSetNewSampleSize(IntPtr spectrumMathPtr);
        public void SpectrumMathSetNewSampleSize(IntPtr spectrumMathPtr)
        { 
            WinX86Impl.n_SpectrumMathSetNewSampleSize( spectrumMathPtr); 
        }

        [DllImport(LibNamePropvider.LibNameWin32, CallingConvention = CallingConvention.Cdecl, EntryPoint = "SpectrumMathClearData")]
        private static extern void n_SpectrumMathClearData(IntPtr spectrumMathPtr);
        public void SpectrumMathClearData(IntPtr spectrumMathPtr)
        { 
            WinX86Impl.n_SpectrumMathClearData( spectrumMathPtr); 
        }

        [DllImport(LibNamePropvider.LibNameWin32, CallingConvention = CallingConvention.Cdecl, EntryPoint = "SpectrumMathReleaseNativeArray")]
        private static extern void n_SpectrumMathReleaseNativeArray(IntPtr arrayPtr);
        public void SpectrumMathReleaseNativeArray(IntPtr arrayPtr)
        { 
            WinX86Impl.n_SpectrumMathReleaseNativeArray( arrayPtr); 
        }

        [DllImport(LibNamePropvider.LibNameWin32, CallingConvention = CallingConvention.Cdecl, EntryPoint = "SpectrumMathSetSquaredSpect")]
        private static extern void n_SpectrumMathSetSquaredSpect(IntPtr spectrumMathPtr, bool fl);
        public void SpectrumMathSetSquaredSpect(IntPtr spectrumMathPtr, bool fl)
        { 
            WinX86Impl.n_SpectrumMathSetSquaredSpect( spectrumMathPtr, fl); 
        }
 
    }
    public class WinX64Impl : ISpectrumNativeLib
    {
        
        [DllImport(LibNamePropvider.LibNameWin64, CallingConvention = CallingConvention.Cdecl, EntryPoint = "createSpectrumMath")]
        private static extern IntPtr n_createSpectrumMath(int sampl_rate, int fft_window, int process_win_freq);
        public IntPtr createSpectrumMath(int sampl_rate, int fft_window, int process_win_freq)
        { 
           return WinX64Impl.n_createSpectrumMath( sampl_rate, fft_window, process_win_freq); 
        }

        [DllImport(LibNamePropvider.LibNameWin64, CallingConvention = CallingConvention.Cdecl, EntryPoint = "freeSpectrumMath")]
        private static extern void n_freeSpectrumMath(IntPtr ptr);
        public void freeSpectrumMath(IntPtr ptr)
        { 
            WinX64Impl.n_freeSpectrumMath( ptr); 
        }
